--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 
 .text-h1 {
-  @apply text-3xl max-xl:text-2xl max-lg:text-xl max-md:text-lg;
+  @apply text-4xl max-xl:text-3xl max-lg:text-2xl max-md:text-xl;
 }
 .text-h2 {
   @apply text-2xl max-xl:text-xl max-lg:text-lg max-md:text-base;
